// Copyright 2018 Samsung SDS Cloud Native Computing Team authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cluster_manager_api;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// The hello world service definition.
service Cluster {
    rpc HelloWorld (HelloWorldMsg) returns (HelloWorldReply) {
        option (google.api.http) = {
      post : "/api/v1/helloworld"
      body: "*"
    };
    }
    rpc GetPodCount (GetPodCountMsg) returns (GetPodCountReply) {
        option (google.api.http) = {
            post : "/api/v1/getpodcount"
            body : "*"
        };
    }
}

// The Hello World request
message HelloWorldMsg {
    string name = 1;
}

// The response to Hello World
message HelloWorldReply {
    string message = 1;
}

message GetPodCountMsg {
    string namespace = 1;
}

message GetPodCountReply {
    int32 pods = 1;
}

